Fix overflow on channel header

--- a/app/assets/stylesheets/api/channel_view/channel.scss
+++ b/app/assets/stylesheets/api/channel_view/channel.scss
@@ -35,12 +35,16 @@
 
 .channel-header.title {
   height: 30px;
-  width: auto;
+  width: 800px;
   padding: 5px;
   font-size: 18px;
   font-weight: 900;
   position: relative;
   border: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
 }
 
 .channel-body {
@@ -77,7 +81,6 @@
   position: absolute;
   width: calc(100% - 40px);
   margin: 0 20px 20px 20px;
-  // height: 60px;
   box-sizing: border-box;
   border: 2px solid lightgrey;
   border-radius: 5px;
@@ -92,6 +95,11 @@
   width: 100%;
   &::placeholder {
     font-size: 15px;
+    width: 400px;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
